# package-docs

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
api/analyzer/Alpha/analysis/: index.html
api/analyzer/Alpha/overview/: index.html
api/analyzer/Alpha/query/: index.html
api/analyzer/overview/: index.html
api/dataio/overview/: index.html
api/overview/: index.html
docs/: index.md
docs/api/: overview.md
docs/api/analyzer/: overview.md
docs/api/analyzer/Alpha/: analysis.md  overview.md  query.md
docs/api/dataio/: overview.md
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/analyzer/Alpha/analysis/: index.html
site/api/analyzer/Alpha/overview/: index.html
site/api/analyzer/Alpha/query/: index.html
site/api/analyzer/overview/: index.html
site/api/dataio/overview/: index.html
site/api/overview/: index.html
src/package_docs/: __init__.py
src/package_docs/analyzer/: __init__.py
src/package_docs/analyzer/alpha/: __init__.py  main.py
src/package_docs/analyzer/alpha/analysis/: base.py  correlation.py  distribution.py  params.py
src/package_docs/analyzer/alpha/facade/: analysis.py  query.py
src/package_docs/analyzer/alpha/query/: base.py  chip.py  measure.py  params.py
src/package_docs/core/: __init__.py  logger.py  s3.py
src/package_docs/dataio/: __init__.py  bdq.py  local.py
