[project]
name = "package-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hanjoo", email = "hanjoo8821@postech.ac.kr" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "ruff>=0.15.0",
]
