[project]
name = "package-docs"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hanjoo", email = "hanjoo8821@postech.ac.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv_build]
version-source = "vcs"
